fix(structured-list, pricing-table): correct coloration, spacing & alignment (#12101)
* fix(structured-list, pricing-table): correct coloration, spacing & alignment

* fix(pricing-table): update pricing-table svg styles

* fix(structured-list, pricing-table): prevent icon shrinkage

* feat(structured-list, pricing-table): stylelint fix

---------

--- a/packages/styles/scss/components/structured-list/_structured-list.scss
+++ b/packages/styles/scss/components/structured-list/_structured-list.scss
@@ -287,14 +287,23 @@
     vertical-align: sub;
 
     svg {
+      flex-shrink: 0;
       fill: $icon-secondary;
     }
   }
 
   .#{$prefix}--structured-list-cell[icon],
   :host(#{$c4d-prefix}-structured-list-cell[icon]) {
-    &[icon='checkmark'] {
+    &[icon='checkmark'] svg {
       color: $support-success;
     }
+
+    svg {
+      margin-inline-end: $spacing-03;
+    }
+  }
+
+  .#{$prefix}--structured-list-cell-icon-text-container {
+    display: flex;
   }
 }
